<resources>
    <string name="app_name">Flashcards Application</string>

    <string name="add_category_btn_text">Add category</string>
    <string name="add_flashcards_btn_text">Add flashcards</string>
    <string name="choose_a_category_to_start_learning">Choose a category to start learning!</string>
    <string name="category_name_text">Category name</string>
    <string name="add_category_text">Add category</string>
    <string name="choose_a_category_to_add_flashcard">Choose a category to add flashcard</string>
    <string name="front_of_flashcard_hint_text">Front of flashcard</string>
    <string name="back_of_flashcard_hint_text">Back of flashcard</string>
    <string name="add_flashcard_btn_text">Add flashcard</string>
    <string name="next_btn_text">NEXT</string>
    <string name="previous_btn_text">PREVIOUS</string>
    <string name="default_category_name">Default category</string>
    <string name="default_front_text">Default front text</string>
    <string name="default_back_text">Domyślny tekst z tyłu</string>
    <string name="add_btn_text">Add</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="default_error_message">Something went wrong. Try again</string>
    <string name="category_added_message">The category has been added</string>
    <string name="first_flashcard_dialog_text">Add the first flashcard to the given category to continue</string>
    <string name="add_flashcard_confirmation_message">The flashcard has been added</string>
    <string name="name_already_exists_error_message">Category name already exists. Enter a unique name</string>
    <string name="amount_of_flashcards_text">Amount of flashcards</string>
    <string name="notification_permission_dialog_message">Please grant this permission. Otherwise you will not receive notifications from application</string>
    <string name="permission_dialog_title">Permission not granted</string>
    <string name="available_categories_text">Available categories</string>
    <string name="available_categories_to_add_text">Available categories to add</string>
    <string name="no_new_categories_to_add_text">There are currently no new categories to add. Check back later</string>
    <string name="category_successfully_saved_text">Category successfully saved</string>
</resources>