<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/default_side_margin"
    tools:context=".presentation.addflashcardsscreen.view.AddFlashcardsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@id/btn_add_flashcards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/very_small_margin"
        android:text="@string/add_flashcard_btn_text"
        android:textAppearance="?attr/textAppearanceButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mcvFlashcard" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvFlashcard"
        style="@style/Widget.Material3.CardView.Elevated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_side_margin"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFlashcardFront"
                style="@style/Widget.App.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/flashcardFront"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/front_of_flashcard_hint_text"
                    android:inputType="none"
                    android:textAppearance="?attr/textAppearanceBodyLarge" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFlashcardBack"
                style="@style/Widget.App.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/flashcardBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/back_of_flashcard_hint_text"
                    android:inputType="none"
                    android:textAppearance="?attr/textAppearanceBodyLarge" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/cpiLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_marginBottom="@dimen/very_high_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mcvFlashcard"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSpinnerCategories"
        style="@style/Widget.App.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/very_high_margin"
        app:layout_constraintBottom_toTopOf="@id/mcvFlashcard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="@dimen/max_constraint_width_for_textview">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/spinnerCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choose_a_category_to_add_flashcard"
            android:inputType="none"
            android:textAppearance="?attr/textAppearanceBodyLarge" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>